# real-world-http-2

./: .gitignore  Cargo.toml
simple_get/: Cargo.toml
simple_get/src/: main.rs
simple_head/: Cargo.toml
simple_head/src/: main.rs
simple_post/: Cargo.toml
simple_post/src/: main.rs
