[package]
name = "simple_head"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

surf = { version = "2.3.2", default-features = false, features = [
  "h1-client",
  "encoding",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
async-std = { version = "1.9.0", features = ["attributes"] }
